
JasperReports Change Log
===================================

JasperReports 1.2.4 (2006-06-xx)
-----------------------------------

- minor bug fixes and improvements;





JasperReports 1.2.3 (2006-05-30)
-----------------------------------
- support for OLAP and MDX queries using Mondrian-based 
query executer and data source implementations;

- support for EJBQL using JPA-based query executer implementation
(contribution by Marcel Overdijk);

- GZIP in-memory virtualizer 
(contributed by John Bindel, Works Inc.);

- new single/swap file virtualizer;

- support for shared file virtualizer;

- minor bug fixes and improvements;





JasperReports 1.2.2 (2006-04-23)
-----------------------------------
- the use of threads is no longer mandatory for the subreport filling process after
introducing a new subreport runner interface and an altenative default implementation
that realies on Javaflow continuations (Jakarta Commons Javaflow library);

- Groovy report compiler moved to core library;

- minor bug fixes and improvements;





JasperReports 1.2.1 (2006-04-07)
-----------------------------------
- support for URL stream handlers to allow loading resources such as images, 
fonts or subreports using customized URL protocols;

- new isPdfSimulatedBold and isPdfSimulatedItalic attributes available 
for the PDF exporter font mappings;

- serialVersionUID frozen at 10200; this will no longer be incremented 
with every new release;

- JExcelApi exporter moved to core library;

- minor bug fixes and improvements;





JasperReports 1.2.0 (2006-02-06)
-----------------------------------
- support for other query languages including HQL and XPath implementations;

- new evaluation time "Auto" available for text fields enabling 
new types of calculations such as percentage;

- CSV datasource;

- conditional styles;

- crosstab total variables to allow combining data at different 
aggregation levels (percentages, etc);

- serialization of virtualized reports;
